# keytap

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: TESTING_PLAN.md
examples/: chord.rs  raw.rs
src/: chord.rs  error.rs  event.rs  key.rs  lib.rs  log.rs  tap.rs
src/platform/: mod.rs  unsupported.rs
src/platform/linux/: keycodes.rs  mod.rs
src/platform/macos/: keycodes.rs  mod.rs  tap.rs
src/platform/windows/: keycodes.rs  mod.rs
